Allows construction of minimal Universes, also for topology-less coord loading
Closes #1371

Adds minimal topology reader that is able to load coordinate/trajectory files on
their own without requiring a topology file

Promotes make_Universe to MDAnalysis from the testsuite.

Universe can now also load the topology file as a frame of the reader together
with the trajectory files.

--- a/package/CHANGELOG
+++ b/package/CHANGELOG
@@ -14,11 +14,16 @@ The rules for this file:
 
 ------------------------------------------------------------------------------
 mm/dd/17 richardjgowers, rathann, orbeckst, tylerjereddy, mtiberti, kain88-de,
-         jbarnoud
+         jbarnoud, manuel.nuno.melo
 
   * 0.17.0
 
 Enhancements
+  * add minimal topology reader that is able to load coordinate/trajectory
+    files on their own without requiring a topology file (Issue #1371)
+  * promote make_Universe to MDAnalysis from the testsuite (Issue #1371)
+  * Universe can now also load the topology file as a frame of the reader
+    together with the trajectory files.
   * add low level lib.formats.libdcd module for reading/writing DCD (PR #1372)
   * replace old DCD reader with a Python 3 ready DCD reader (Issue #659)
 
