Add a molnums topology attribute to TPR parser
PR #1557 introduced the moltype attribute that gives a name to each kind
of molecule in a topology. This commit adds the related molnums
attribute that gives an index to each individual molecules.

The molnums attributes allows to split a system by molecule without
ambiguity when the attribute is defines. Without this commit, the only
way of splitting a system per molecule is `atom_group.fragments`. While
it works most of the time, it can fail in some topology that use other
topology tricks than bonds to connect atoms; this is the case in gromacs
with virtual sites for instance. Fragments can also be time consuming on
large systems. This commits allows to slit a system per molecule without
ambiguity with `atom_group.groupby('molnums')` or
`atom_group.split('molecule')`.

This commit also adds the `molnum` selection keyword. To do so, this
commit refactored `mda.core.selection.SelectionRange` to avoid code
duplication.

--- a/package/CHANGELOG
+++ b/package/CHANGELOG
@@ -22,9 +22,10 @@ Enhancements
   * Python versions 3.4 and upwards are now supported (Issue #260)
   * add low level lib.formats.libdcd module for reading/writing DCD (PR #1372)
   * replace old DCD reader with a Python 3 ready DCD reader (Issue #659)
-  * The TPR parser populate the `moltypes` topology attribute and
-    the `moltype` selection keyword is added (Issue #1555)
   * about 20% speed improvements for GNM analysis. (PR #1579)
+  * The TPR parser populate the `moltypes` and `molnums` topology attributes;
+    the `moltype` and `molnum` selection keyword are added
+    (Issue #1555, PR #1578)
 
 Deprecations
 
